# vacancy_parser

./: .gitignore  README.md  config.py  main.py  pyproject.toml
src/: db_manager.py  head_hunter_api.py  parser.py
tests/: conftest.py  test_db_manager.py  test_head_hunter_api.py
