[tool.poetry]
name = "coursework-5"
version = "0.1.0"
description = ""
authors = ["Александра <aleksandrasilina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
